# report_maker

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: celery_app.py  main.py  tasks.py
backend/app/api/: auth_routes.py  jobs.py  report_routes.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/utils/: csv_validator.py  helper.py  validator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: SideBar.tsx
frontend/src/pages/: HisoryPage.tsx  LoginPage.tsx  RegisterPage.tsx  UploadPage.tsx
nginx/: nginx-selfsigned.crt  nginx-selfsigned.key  nginx.conf
