[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "celery>=5.6.2",
  "fastapi>=0.128.0",
  "pandas>=3.0.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.12.0",
  "pymysql>=1.1.2",
  "python-multipart>=0.0.21",
  "redis>=7.1.0",
  "sentry-sdk>=2.50.0",
  "sqlalchemy>=2.0.46",
  "uvicorn>=0.40.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.13"]
