[project]
name = "report_maker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiomysql>=0.3.2",
  "bcrypt>=5.0.0",
  "email-validator>=2.3.0",
  "fastapi>=0.128.0",
  "greenlet>=3.3.0",
  "pandas>=3.0.0",
  "pydantic-settings>=2.12.0",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.21",
  "redis>=7.1.0",
  "sentry-sdk>=2.50.0",
  "sqlalchemy>=2.0.46",
  "uvicorn>=0.40.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.13"]
